objects/Assigned_Task__c.object
<CustomObject>
    <fields>
        <fullName>Assign_To__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Assigned To</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Assigned_Tasks</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Check_Mentor__c</fullName>
        <formula>IF( Assign_To__r.Mentor__c = $User.Id , 1, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Logged In Guide</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Current_Manager__c</fullName>
        <formula>IF( Assign_To__r.ManagerId = $User.Id , 1, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Logged in Trailmaker</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Current_User__c</fullName>
        <formula>IF( Assign_To__c =  $User.Id , 1, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Logged in Explorer</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Current_Value__c</fullName>
        <label>Current Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Due_Today__c</fullName>
        <formula>DATEVALUE( Target_Date_Time__c) == Today()</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Due Today</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Energizers__c</fullName>
        <label>Energizers</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Feedback__c</fullName>
        <label>Feedback</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Medals__c</fullName>
        <label>Medals</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Milestone__c</fullName>
        <label>Milestone</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Milestone 1</fullName>
                </value>
                <value>
                    <fullName>Milestone 2</fullName>
                </value>
                <value>
                    <fullName>Milestone 3</fullName>
                </value>
                <value>
                    <fullName>Milestone 4</fullName>
                </value>
                <value>
                    <fullName>Milestone 5</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Onboarding_Program__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Onboarding Trail</label>
        <referenceTo>Onboarding_Program__c</referenceTo>
        <relationshipLabel>Assigned Trails/Steps</relationshipLabel>
        <relationshipName>Assigned_Tasks_Programs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Overdue__c</fullName>
        <formula>IF( (TEXT(Status__c) == &apos;In-Progress&apos; || TEXT(Status__c) == &apos;New&apos;) &amp;&amp; (Target_Date_Time__c &lt;  NOW()) ,true,false)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Overdue</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Parent_Assigned_Task__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Parent Assigned Trail</label>
        <referenceTo>Assigned_Task__c</referenceTo>
        <relationshipLabel>Assigned Trails/Steps</relationshipLabel>
        <relationshipName>Child_Assigned_Tasks</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Percentage_Completed__c</fullName>
        <label>Percentage Completed</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Reason_for_Reopen__c</fullName>
        <label>Reason for Reopen</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Assigned_Task_Status</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Target_Date_Time__c</fullName>
        <label>Target Date Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Task__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Onboarding Step</label>
        <referenceTo>On_boarding_Task__c</referenceTo>
        <relationshipLabel>Assigned Trails/Steps</relationshipLabel>
        <relationshipName>Assigned_Tasks</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Quantifiable</fullName>
                </value>
                <value>
                    <fullName>Non-quantifiable</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Assigned Trail/Step</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Assign_To__c</columns>
        <columns>Task__c</columns>
        <columns>Status__c</columns>
        <columns>Target_Date_Time__c</columns>
        <columns>Milestone__c</columns>
        <columns>Onboarding_Program__c</columns>
        <columns>Overdue__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Assign_To__c</field>
            <operation>equals</operation>
            <value>Apurva Birala</value>
        </filters>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All_Assigned_Tasks</fullName>
        <columns>NAME</columns>
        <columns>Task__c</columns>
        <columns>Assign_To__c</columns>
        <columns>Status__c</columns>
        <columns>Target_Date_Time__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Task__c</field>
            <operation>notEqual</operation>
        </filters>
        <label>All Assigned Tasks</label>
    </listViews>
    <listViews>
        <fullName>Assigned_Programs</fullName>
        <columns>NAME</columns>
        <columns>Onboarding_Program__c</columns>
        <columns>Assign_To__c</columns>
        <columns>Milestone__c</columns>
        <columns>Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Onboarding_Program__c</field>
            <operation>notEqual</operation>
        </filters>
        <filters>
            <field>Assign_To__c</field>
            <operation>equals</operation>
            <value>Apurva Birala</value>
        </filters>
        <label>All Assigned Trails</label>
    </listViews>
    <nameField>
        <displayFormat>AT-{0000}</displayFormat>
        <label>Assigned Trail/Step Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Assigned Trails/Steps</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>